RESOLVED FIXED12072
select with align attribute should not affect contained text
https://bugs.webkit.org/show_bug.cgi?id=12072
Summary select with align attribute should not affect contained text
Sam Weinig
Reported 2007-01-02 08:09:53 PST
Currently, a select element with align='center' or align='right' causes the text contained in the button to be aligned center or right respectively. Firefox and Opera always renders the text content left-justified. I once again have not tested in IE6 or IE7.
Attachments
testcase (1.27 KB, text/html)
2007-01-02 08:10 PST, Sam Weinig
no flags
patch (49.03 KB, patch)
2007-01-02 11:07 PST, Sam Weinig
no flags
Sam Weinig
Comment 1 2007-01-02 08:10:30 PST
Created attachment 12163 [details] testcase
Bradley Morrison
Comment 2 2007-01-02 08:24:00 PST
Took a look at the testcase in IE6, can confirm text is left justified in all select elements.
Sam Weinig
Comment 3 2007-01-02 11:07:12 PST
Sam Weinig
Comment 4 2007-01-02 11:14:51 PST
Landed in r18529.
Darin Adler
Comment 5 2007-01-02 22:01:34 PST
Comment on attachment 12166 [details] patch Clear review flag since Sam already landed this.
Note You need to log in before you can comment on or make changes to this bug.