LayoutTests:

Reviewed by Anders.

        Testcase for http://bugs.webkit.org/show_bug.cgi?id=12072

        * fast/forms/select-align-expected.checksum: Added.
        * fast/forms/select-align-expected.png: Added.
        * fast/forms/select-align-expected.txt: Added.
        * fast/forms/select-align.html: Added.

WebCore:

        Reviewed by Anders.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=12072
        select with align attribute should not affect contained text

        Don't map align for select elements.

        Test: fast/forms/select-align.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::parseMappedAttribute):



Canonical link: https://commits.webkit.org/15573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18529 268f45cc-cd09-0410-ab3c-d52691b4dbfc