WebCore/html/HTMLSelectElement.cpp
@@ -331,6 +331,9 @@ void HTMLSelectElement::parseMappedAttribute(MappedAttribute *attr)
         }
     } else if (attr->name() == accesskeyAttr) {
         // FIXME: ignore for the moment
+    } else if (attr->name() == alignAttr) {
+        // Don't map 'align' attribute.  This matches what Firefox, Opera and IE do.
+        // See http://bugs.webkit.org/show_bug.cgi?id=12072
     } else if (attr->name() == onfocusAttr) {
         setHTMLEventListener(focusEvent, attr);
     } else if (attr->name() == onblurAttr) {
